Add Shopping Cart and Checkout Features
✨ New Features:
- Complete shopping cart functionality with quantity management
- Multi-step checkout process (Address → Payment → Review → Confirmation)
- Order confirmation screen with tracking details
- Cart and checkout API integration with FakeStore API

🎨 UI/UX Enhancements:
- Material Design cart and checkout layouts
- Step indicator for checkout progress
- Empty cart state with call-to-action
- Quantity controls with increase/decrease buttons
- Order summary cards with pricing breakdown

📱 Technical Implementation:
- Cart and Order domain models with validation
- CartResponse and CartRequest API models
- Updated navigation graph with cart/checkout flows
- Comprehensive string resources for cart features
- Toolbar with cart icon and menu

📚 Documentation:
- Updated README with extended challenge requirements
- Added cart and checkout to core features (now 7 features)
- Enhanced project structure and time allocation guidance
- Expanded bonus features for e-commerce enhancements

This significantly enhances the coding challenge to be more representative of real-world e-commerce development, providing candidates with comprehensive cart and checkout implementation experience.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,49 @@
     <string name="product_rating">Rating: %.1f (%d reviews)</string>
     <string name="add_to_favorites">Add to Favorites</string>
     <string name="remove_from_favorites">Remove from Favorites</string>
+    <string name="add_to_cart">Add to Cart</string>
     <string name="price_format">$%.2f</string>
+    
+    <!-- Cart -->
+    <string name="cart">Cart</string>
+    <string name="shopping_cart">Shopping Cart</string>
+    <string name="cart_items_count">%d items</string>
+    <string name="subtotal">Subtotal</string>
+    <string name="tax">Tax</string>
+    <string name="total">Total</string>
+    <string name="proceed_to_checkout">Proceed to Checkout</string>
+    <string name="continue_shopping">Continue Shopping</string>
+    <string name="remove_item">Remove item</string>
+    <string name="increase_quantity">Increase quantity</string>
+    <string name="decrease_quantity">Decrease quantity</string>
+    
+    <!-- Checkout -->
+    <string name="checkout">Checkout</string>
+    <string name="shipping_address">Shipping Address</string>
+    <string name="payment_method">Payment Method</string>
+    <string name="order_review">Order Review</string>
+    <string name="place_order">Place Order</string>
+    <string name="continue_to_payment">Continue to Payment</string>
+    <string name="continue_to_review">Continue to Review</string>
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="address_line_1">Address Line 1</string>
+    <string name="address_line_2">Address Line 2 (Optional)</string>
+    <string name="city">City</string>
+    <string name="state">State</string>
+    <string name="zip_code">ZIP Code</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="shipping">Shipping</string>
+    <string name="order_summary">Order Summary</string>
+    
+    <!-- Order Confirmation -->
+    <string name="order_confirmed">Order Confirmed!</string>
+    <string name="order_confirmation_message">Thank you for your order. We\'ll send you a confirmation email shortly.</string>
+    <string name="order_number">Order Number</string>
+    <string name="order_date">Order Date</string>
+    <string name="estimated_delivery">Estimated Delivery</string>
+    <string name="total_amount">Total Amount</string>
+    <string name="track_order">Track Your Order</string>
     
     <!-- Error Messages -->
     <string name="error_network">Network error. Please check your connection.</string>
@@ -29,6 +71,8 @@
     <string name="no_favorites_description">Products you favorite will appear here</string>
     <string name="no_search_results">No results found</string>
     <string name="no_search_results_description">Try searching for something else</string>
+    <string name="empty_cart">Your cart is empty</string>
+    <string name="empty_cart_description">Add some products to get started</string>
     
     <!-- Content Descriptions -->
     <string name="cd_product_image">Product image</string>
